
Improvements:

    - Failed "depends on" specifications are now printed before tests are
      actually run. This means the messages will show up when using the '-g'
      option. Also, additional information is given about the failure.

    - The --run-dir option can now contain multiple path segments and/or can
      be an absolute path.

    - The script_util.platform_expr() and script_util.option_expr() now take
      shell-style wildcards in the expressions. For example,

          import vvtest_util as vvt
          from script_util import platform_expr
          if platform_expr('Lin*'):
              print ( "the platform name matches the expression" )

    - The list of test keywords is now available as a variable in the
      vvtest_util.py and vvtest_util.sh script fragments, such as

          KEYWORDS = ['foo','bar']

    - The environment variable VVTEST_PLATFORM_SPECS can be used to specify
      platform settings, such as the batch system, the max number of cores
      available, the cores per node, the devices per node, etc. The syntax
      is comma separated name=value. For example,

          VVTEST_PLATFORM_SPECS="batchsys=slurm,cores_per_node=44"

      The platform settings precedence is command line first, then this
      environment variable, then user plugin values, then builtin values.

    - The following two groups of variables will now always be defined in the
      vvtest_util.py and vvtest_util.sh files:

          RESOURCE_np =
          RESOURCE_IDS_np =
          RESOURCE_TOTAL_np =

          RESOURCE_ndevice =
          RESOURCE_IDS_ndevice =
          RESOURCE_TOTAL_ndevice =

      If there are no devices (GPUs), then ndevice and total ndevice are zero.

    - A soft link to vvtest and a config directory can now be used (without
      using the vvtest_bootstrap.py mechanism).

    - Including files into test headers (a.k.a, inserting directive files)
      can now have testname, platform, and option attributes. For example,
